--- a/config/common-config.yml
+++ b/config/common-config.yml
@@ -1,22 +1,4 @@
-server:
-  port: 8764
-spring:
-  application:
-    name: eurekaclient
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-  zipkin:
-    base-url: http://localhost:9411
-    sender:
-      type: web
-  sleuth:
-    sampler:
-      probability : 1
-management:
-  endpoints:
-    web:
-      exposure:
-        include: refresh,health,info,bus-refresh
+#开启熔断器
+feign:
+  hystrix:
+    enabled: true
