--- a/repo/mybatis-plus.yml
+++ b/repo/mybatis-plus.yml
@@ -1,6 +1,6 @@
 mybatis-plus:
   mapper-locations: /com/sep/*/repository/mapper/*Mapper.xml
-  config-location:
+  config-location: classpath:/mybatis-config.xml
   type-aliases-package: com.sep.*.model
   global-config:
     db-config:
